Fix test coverage report to include JS files
VTMS-2541

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prepublishOnly": "npm run build",
     "start": "nwb serve-react-demo",
     "test:watch": "jest --watch --no-cache",
-    "test": "jest --coverage --collectCoverage",
+    "test": "jest --coverage --collectCoverageFrom=src/**/*.jsx --collectCoverageFrom=src/**/*.js",
     "lint": "eslint --ext .js --ext .jsx src/ -o build/eslint.xml -f checkstyle || true",
     "lintfix": "eslint --fix --ext .js --ext .jsx src/"
   },
