--- a/.eslintrc
+++ b/.eslintrc
@@ -54,6 +54,7 @@
         "no-return-assign": ["error"],
         "no-shadow": 0,
         "no-unused-vars": ["warn"],
+        "no-unused-expressions": 0,
         "no-useless-escape": 0,
         "object-curly-spacing": ["error", "never"],
         "one-var": [
