--- a/.eslintrc
+++ b/.eslintrc
@@ -97,13 +97,7 @@
         "prefer-rest-params": ["error"],
         "prefer-template": ["error"],
         "rest-spread-spacing": ["error", "never"],
-        "sort-imports": [
-            "warn",
-            {
-                "ignoreCase": true,
-                "memberSyntaxSortOrder": ["multiple", "single", "all", "none"]
-            }
-        ],
+        "sort-imports": 0,
         "template-curly-spacing": ["error", "never"],
         "yield-star-spacing": ["error", "after"],
 
